# SnapTask

./: .env.example  .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: auto-update.yml  build.yml  release.yml
server/: .env.example  Dockerfile  docker-compose.yml  package.json
server/src/: db.ts  index.ts
server/src/middleware/: auth.ts
server/src/routes/: auth.ts  sync.ts
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/ai/: engine.rs  mod.rs  models.rs  prompts.rs
src-tauri/src/commands/: ai_commands.rs  client_commands.rs  mod.rs  project_commands.rs  reminder_commands.rs  screenshot_commands.rs  settings_commands.rs  sync_commands.rs  task_commands.rs  window_commands.rs
src-tauri/src/db/: client.rs  init.rs  mod.rs  models.rs  project.rs  reminder.rs  sync.rs  task.rs
src-tauri/src/reminder/: scheduler.rs
src-tauri/src/screenshot/: capture.rs  hotkey.rs
src-tauri/src/sync/: config.rs  engine.rs
src/components/Common/: Tag.tsx  (+13 more)
src/lib/: tauri.ts
src/pages/: CalendarPage.tsx  FloatingCardPage.tsx  ScreenshotSelectPage.module.css  ScreenshotSelectPage.tsx  SettingsPage.tsx  TaskBoardPage.tsx  TimelinePage.tsx
src/stores/: aiStore.ts  clientStore.ts  projectStore.ts  reminderStore.ts  settingsStore.ts  syncStore.ts  taskStore.ts
src/types/: index.ts
src/utils/: date.ts  priority.ts  theme.ts
(+31 files in other folders)
